# osc-server-plugin

./: CMakeLists.txt  README.md  buildspec.json
data/: osc-test-overlay.html
data/locale/: en-US.ini
src/: osc-manager.cpp  osc-manager.hpp  osc-settings-dialog.cpp  osc-settings-dialog.hpp  plugin-main.cpp
